--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <i aria-label="Cerrar panel" id="close-aside" class="close-aside fas fa-times"></i>
       <!-- ----------CONTENEDOR DE PROPIEDADES IMAGEN PANNEL-------------->
       <div class="aside-img">      
-        <h2>IMAGEN</h2>cont-input
+        <h2>IMAGEN</h2>
         <!-- ----------IMAGEN FORM PANNEL-------------->
         <form id="imageForm">
           <div class="flex-column">
